samples/_failures_safe/1761091057_0b4968_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_05261e9f.c: In function ‘main’:
./samples/SAFE/__tmp_05261e9f.c:158:21: error: expected declaration or statement at end of input
  158 |                     print_matrix(&result, "A + B");
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_05261e9f.c:158:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_05261e9f.c:158:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_05261e9f.c:158:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_05261e9f.c:158:21: error: expected declaration or statement at end of input
